js/js.translator/testData/incremental/invalidation/companionPropertiesWithIntraModuleInliner/lib1/l1.10.kt
class MyClass {
    companion object {
        val intProperty: Int
            inline get() = 6
    }
}
